--- a/src/components/coming/comingsoon.css
+++ b/src/components/coming/comingsoon.css
@@ -1,15 +1,17 @@
 .coming {
-    padding: 3%;
+    padding: 12vh 5%;
     color: var(--night-blue);
     text-align: center;
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,rgba(17, 17, 26, 0.05) 0px 8px 32px;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
     border-radius: 5px;
 }
+
 .coming img {
     display: block;
     width: 50%;
     margin: auto;
 }
+
 .coming .form input {
     display: inline-block;
     width: 80%;
@@ -20,6 +22,7 @@
     text-align: center;
     outline: none;
 }
+
 .coming .form button {
     display: block;
     margin: 20px auto;
@@ -32,6 +35,7 @@
     font-weight: bold;
     outline: none;
 }
+
 .coming span {
     color: var(--red);
     padding: 1%;
@@ -40,19 +44,25 @@
 
 
 @media screen and (min-width: 768px) {
+    .coming {
+    padding: 5%;
+}
     .coming img {
         width: 30%;
     }
+
     .coming .form input {
         width: 30%;
         padding: 1% 2%;
     }
+
     .coming .form button {
         display: inline-block;
         margin: 0px;
         margin-left: 15px;
         padding: 1% 2%;
     }
+
     .coming span {
         display: inline-block;
         margin-top: 15px;
