--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   --red-transparent: #cc161693;
   --blue: blue;
   --green: #2ecc71;
+  --yellow: #ffee01;
   --night-blue: #0f394c;
   --transparent: #00000029;
   --transparent2: #c5ced7;
