--- a/src/components/home/about/about.css
+++ b/src/components/home/about/about.css
@@ -57,6 +57,10 @@
   /* border: 1px solid #000; */
   max-height: 50px;
 }
+.about .about-descrit{
+  text-align: left!important;
+  font-weight: unset!important;
+}
 
 @media screen and (min-width: 902px) {
   .about-container {
@@ -116,7 +120,7 @@
 
 @media screen and (min-width: 1200px) {
     .about-container {
-        font-size: 1.5em;
+        font-size: 1.1em;
     }
     .about button {
         padding: 2% 4% 2% 0;
