--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -47,6 +47,7 @@
     font-weight: bold;
     overflow: hidden;
     transition: all 0.6s ease-out;
+    /* transform: translateY(-10px); */
 }
 .hero .btn-flip:hover{
     color: var(--white);
@@ -129,27 +130,38 @@
     .presentation {
         flex-basis: 55%;
         order: -1;
+        margin-top: -50px;
+    }
+    .present{
     }
     .hero h1 {
         font-size: 1.8em;
+        /* margin-top: -20px; */
     }
     .hero p {
-        font-size: 1.5em;
+        font-size: 1.2em;
+        /* margin-top: -10px; */
     }
     .hero button {
         padding: 3% 4%;
     }
     .hero .countries h3 {
-        font-size: 1.8em;
+        font-size: 1.4em;
     }
 }
 
 @media screen and (min-width: 1500px) {
+    /* .hero{
+        padding: 100px auto!important;
+    } */
     .hero img, .hero>video {
-        flex-basis: 50%;
+        flex-basis: 55%;
+        /* transform: translateY(-130px); */
+
     }
     .presentation {
-        flex-basis: 45%;
+        flex-basis: 50%;
+        /* transform: translateY(30px); */
     }
     .hero h1 {
         font-size: 3em;
@@ -160,9 +172,27 @@
     .hero button {
         font-size: 2em;
     }
-    .hero .countries h3 {
-        font-size: 2.3em;
+    .hero .countries{
+        width: 88%;
+        height: 200px;
     }
+    .hero .countries h3 {
+        font-size: 2em;
+    }
+    .country img{
+        transform: translateX(0);
+        width: 50px;
+    }
+    .hero .country img {
+        display: block;
+        width: 7%;
+        max-width: 80px;
+        max-height: 82px;
+        margin: 0px;
+    }
+    /* .hero .btn-flip {
+        padding: 3% 5%;
+    } */
 }
 
 .to-up {
