--- a/src/components/home/more/more.css
+++ b/src/components/home/more/more.css
@@ -13,6 +13,7 @@
   text-align: center;
   background-color: #ffffff;
   padding: 40px 7%;
+  color: #6E747B;
 }
 .more .more-section .ligne-rouge{
     width: 10%;text-align: left;padding-bottom: 5px;
@@ -39,7 +40,15 @@
     padding: 5px;
     width: 20px;
 }
-.more .more-section p,li{
+.more .more-section li{
+    font-size: 21px;
+    text-align: left;
+}
+.more .more-section h3{
+    text-align: left;
+    padding-left: 2%;
+}
+.more .more-section p{
     text-align: left;
     font-size: 21px;
     margin-top: 0;
@@ -48,5 +57,8 @@
 @media only screen and (min-width:992px){
     .more .player{
         width: 100%;
+    }
+    .para-li{
+        padding-left: 7%;
     }
 }
