--- a/src/components/sellcrypto/sellcrypto.css
+++ b/src/components/sellcrypto/sellcrypto.css
@@ -65,6 +65,13 @@
 .modal-container{
   padding: 10px auto;
 }
+.sellcrypto .crypt-sell{
+  width: 80%;
+  margin: 0 auto;
+  font-size: 1em;
+  text-align: center;
+  font-weight: unset!important;
+}
 
 @media screen and (min-width: 768px) {
   .sellcrypto .disjoint{
@@ -77,5 +84,10 @@
   }
   .sellcrypto .rate {
     padding: 3%;
+  }
+  .sellcrypto h1 {
+    width: 80%;
+    margin: 15px auto;
+    font-size: 1.7em;
   }
 }
