--- a/src/components/home/steps/steps.css
+++ b/src/components/home/steps/steps.css
@@ -12,16 +12,25 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
+  font-weight: normal;
+  transform: translateY(-15px);
+  font-size: 1em;
+}
+.steps .retir{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
   font-size: 2em;
 }
-.steps h2 span {
+/* .steps h2 span {
   display: block;
   width: 120px;
   margin-bottom: 8px;
   background: var(--white);
   border: 3px solid var(--white);
   border-radius: 10px;
-}
+} */
 .step {
   margin: 40px auto;
   display: flex;
