--- a/src/components/home/testimonials/testimonials.css
+++ b/src/components/home/testimonials/testimonials.css
@@ -5,7 +5,8 @@
 }
 .testimonials h2{
     text-align: center;
-    font-size: 2em;
+    transform: translateY(-15px);
+    font-size: 1em;
 }
 .testimonials h3 {
     text-align: center;
@@ -54,6 +55,14 @@
 }
 .testi-body h4 {
 }
+.testimonials .temoin{
+    text-align: center;
+    font-size: 1.5em;
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+}
+
 
 
 @media screen and (min-width: 768px) {    
@@ -69,6 +78,13 @@
     }    
     .testimonials-carousel {
         min-width: 940px;
+    }
+    .testimonials .temoin{
+        text-align: center;
+        font-size: 2em;
+        display: flex;
+        justify-content: center;
+        font-weight: bold;
     }
 
 }
