--- a/src/components/pay/pay.css
+++ b/src/components/pay/pay.css
@@ -48,6 +48,9 @@
   color: var(--blue);
   text-decoration: underline;
 }
+.bulet{
+  cursor: pointer;
+}
 .phone-step {
   display: flex;
   flex-flow: row nowrap;
