--- a/src/components/success/success.css
+++ b/src/components/success/success.css
@@ -59,6 +59,7 @@
 .bilan {
     min-width: 300px;
     color: var(--night-blue);
+    background-color: var(--berge);
 }
 
 .bilan .row {
@@ -66,8 +67,8 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 15px;
-    padding: 2% 1%;
-    border-top: 3px solid var(--night-blue);
+    padding: 1% 6%;
+    border-top: 3px solid var(--white);
     font-size: 1em;
 }
 .bilan .row a {
@@ -77,9 +78,14 @@
 }
 .bilan .span {
     display: block;
-    margin-top: 30px;
+    padding: 15px;
     text-align: center;
     /* color: var(--green); */
+}
+.bilanTitle{
+    padding: 25px 6%;
+    margin-top: -15px;
+    margin-bottom: 0;
 }
 
 
@@ -118,8 +124,7 @@
         display: flex;
         justify-content: space-between;
         margin-bottom: 15px;
-        padding: 1%;
-        border-top: 3px solid var(--night-blue);
+        border-top: 3px solid var(--white);
         font-size: 1.2em;
     }
 }
