--- a/src/components/buycrypto/buycrypto.css
+++ b/src/components/buycrypto/buycrypto.css
@@ -98,6 +98,48 @@
 .buy-title,.wallet-div{
   padding: 0 20px;
 }
+.buycrypto .choisix  {
+  display: flex;
+}
+.buycrypto .choisix .choix1  {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2% 5%;
+  width: 33.3%;
+  background-color: #F6EFEF;
+}
+.buycrypto .choisix .choix1  input{
+  width: 100%;
+  padding: 0% ;
+  color: var(--red);
+  font-weight: bold;
+  transition: ease 0.3s;
+  cursor: pointer;
+}
+.buycrypto .choisix .choix1  input:hover{
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+  /* border: 1px solid black; */
+  border-radius: 2px;
+  font-weight: bold;
+  /* font-size: x-large; */
+  color: var(--red);
+  opacity: 0.8;
+  border: 1px solid black;
+}
+.cryptoActif{
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px!important;
+  background-color: var(--red)!important;
+  border-radius: 2px!important;
+  font-weight: bold!important;
+  color: var(--white)!important;
+  border: 1px solid var(--red)!important;
+}
+
+.buycrypto .imgBtc{display: none;}
+.buycrypto .btc{
+  display: block;
+}
 
 @media screen and (min-width: 768px) {
   .disjoint {
@@ -125,6 +167,18 @@
   .buycrypto h1 {
     font-size: 1.7em;
   }
-  
+  .buycrypto .choisix  {
+    margin-top: 10px;
+  }
+  .buycrypto .choisix .choix1  input{
+    font-size: x-large;
+    padding: 4%;
+  }
+  .buycrypto .imgBtc{
+    display: block;
+    width: 25px;
+    height: 25px;
+    transform: translateX(170%);
+  }
 }
 
