--- a/src/components/forget/forget.css
+++ b/src/components/forget/forget.css
@@ -99,14 +99,14 @@
     /*--site mode tablette--*/
     
     .forget-paragraph{
-        margin-top: 60px;
+        margin-top: 40px;
     }
     .forget-form{
         /* font-family: 'montserat'; */
         min-height: 50vh;
         width: 55%;
         margin: 0 auto 35px;
-        padding: 16px 30px 0 30px ;
+        padding: 16px 30px 15px 30px ;
         border: 1px solid #eeeeee;
         box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,rgba(17, 17, 26, 0.05) 0px 8px 32px;
     }
