--- a/src/components/forget/forget.css
+++ b/src/components/forget/forget.css
@@ -1,3 +1,10 @@
+.forget{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 90%;
+}
 .txt-load{
     text-align: center;
 }
@@ -16,7 +23,6 @@
 .forget-form{
     /* font-family: 'montserat'; */
     width:75%;
-    min-height: 40vh;
     margin: 0px auto 20px auto;
     padding: 16px;
     border-radius: 8px;
@@ -99,11 +105,10 @@
     /*--site mode tablette--*/
     
     .forget-paragraph{
-        margin-top: 40px;
+        margin-top: 25px;
     }
     .forget-form{
         /* font-family: 'montserat'; */
-        min-height: 50vh;
         width: 55%;
         margin: 0 auto 35px;
         padding: 16px 30px 15px 30px ;
@@ -127,10 +132,14 @@
         padding: 7px 30px;
         border-radius: 4px;
     }
+    .forget .form-inp{
+        margin: 15px auto;
+      }
 
 }
 @media only screen and (min-width: 776px) {
     .forget-form {
+        width: 45%;
         margin: 0px auto 55px auto;
     }
     .forget-title{
@@ -142,9 +151,9 @@
 @media only screen and (min-width: 992px) {
     /*--site mode tablette--*/
     
-    .forget-title{
+    /* .forget-title{
         padding-top: 35px;
-    }
+    } */
     .forget-form{
         /* font-family: 'montserat'; */
         width: 35%;
@@ -153,7 +162,7 @@
         box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,rgba(17, 17, 26, 0.05) 0px 8px 32px;
     }
     .forget-title{
-        padding-left: 32%;
+       text-align: center;
         /* font-family: 'montserat'; */
         color: #262626;
         display: block;
@@ -163,6 +172,7 @@
         margin-inline-start: 0px;
         margin-inline-end: 0px;
         font-weight: bold;
+        padding: 0;
     }
     .forget-btn{
         display: block;
