code to test before deploying

--- a/src/components/sellcrypto/sellmodal.css
+++ b/src/components/sellcrypto/sellmodal.css
@@ -148,7 +148,7 @@
 
 .icopy {
   display: inline-block;
-  max-width: 125px;
+  /* max-width: 125px; */
   padding: 0px;
   border: none;
   resize: none;
