re-set send money feature

--- a/src/components/home/contacts/contacts.css
+++ b/src/components/home/contacts/contacts.css
@@ -224,6 +224,9 @@
     .address-field {
         transform: translateX(5px);
     }
+    .info img {
+        width: 45%;
+    }
 }
 
 @media screen and (min-width: 1200px) {
