--- a/src/components/notfound/notfound.css
+++ b/src/components/notfound/notfound.css
@@ -1,8 +1,10 @@
 
 .notfound .error {
   display: flex;
-  flex-flow: row wrap;
-  width: 900px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 90%;
   height: 50vh;
   margin: 20vh auto;
 }
@@ -15,8 +17,8 @@
   height: 90%;
 }
 .notfound .image {
-  width: 40vh;
-  height: 40vh;
+  width: 25vh;
+  height: 25vh;
   border-radius: 50%;
   background-color: var(--berge);
   background-image: url("./emoji.png");
@@ -39,6 +41,7 @@
   font-family: nunito, sans-serif;
   font-size: 65px;
   font-weight: 700;
+  transform: translateY(10px);
   margin-top: 0;
   margin-bottom: 10px;
   color: var(--night-blue);
@@ -67,4 +70,15 @@
   text-decoration: none;
   color: var(--red);
   cursor: pointer;
+}
+
+@media only screen and (min-width: 768px){
+  .notfound .error {
+    display: flex;
+  }
+  .notfound .image {
+    width: 40vh;
+    height: 40vh;
+  }
+  
 }
