--- a/src/components/sendmoney/modal2.css
+++ b/src/components/sendmoney/modal2.css
@@ -1,6 +1,5 @@
 .m2customModal{
     border-radius: 8px;
-    max-width: 32vw;
     text-align: center;
 }
 .m2customModal h2 {
@@ -12,5 +11,30 @@
 }
 .m2customModal p{
     text-align: left;
+}
+.content2 .body-content2 .right{
+    margin: 0;
+    padding:  7px 15px;
+    text-align: center;
+} 
+.content2 .body-content2 .left{
+    padding: 7px;
+}
+
+@media screen and (min-width: 500px) {
+    .m2customModal{
+    max-width: 35vw;
+    }
+    .m2customModal h2 {
+        padding: 7px 12px ;
+    }
+}
+@media screen and (min-width: 992px) {
+    .m2customModal{
+    max-width: 32vw;
+    }
+    .m2customModal h2 {
+        padding: 7px 12px ;
+    }
 }
 
