--- a/src/components/dash/dashboard.css
+++ b/src/components/dash/dashboard.css
@@ -1,17 +1,29 @@
 .dash{
-    background: linear-gradient(106.37deg,#ffe1bc 29.63%,#ffcfd1 51.55%, #f3c6f1 90.85%);
-    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: var(--berge);
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Inter', sans-serif;
+    z-index: 1000;
   }
   .AppGlass{
     display: grid;
-    height: 97%;
     width: 97%;
     border-radius: 2em;
     background-color: var(--glass);
     overflow: hidden;
-    grid-template-columns: 11rem auto 20rem;
+    grid-template-columns: 13rem auto 0rem;
+  }
+
+  @media only screen and (max-width: 768px) {
+    .AppGlass{
+      grid-template-columns: 15% 80% auto;
+      overflow-y: scroll;
+      grid-column-gap: 10px;
+    }
+    
   }
